fixed spacing issues

--- a/src/components/special-projects-page/gallery/gallery.module.scss
+++ b/src/components/special-projects-page/gallery/gallery.module.scss
@@ -3,6 +3,7 @@
 .listItem {
   &:nth-child(odd) {
     background-color: variables.$lightGrey;
+    padding: 100px 0;
   }
   margin-top: 100px;
 }
